data/derived/fa15/progs/unify/prog1061.ml.out
Characters 57-58:
  let fixpoint (f,b) = wwhile (let h x = (f, (f x) = x) in h,b);;
                                                           ^
Error: This expression has type 'a -> ('a -> 'a) * bool
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a -> 'a
